logging/k8s/ingress-route-kibana.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kibana
  namespace: kube-logging
spec:
  entryPoints:
    - websecure
  tls: 
    secretName: tls-env0-kibana
  routes:
    - match: Host(`kibana.env0.luojm.com`) 
      kind: Rule
      services:
      - name: kibana
        kind: Service
        namespace: kube-logging
        port: 5601
